basics of CRUD implemented

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,10 @@
 
   <body>
     <%= yield %>
+    <ul>
+      <li class="button">
+        <%= link_to "See all tasks", tasks_path %>
+      </li>
+    </ul>
   </body>
 </html>
