--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,13 +1,14 @@
 <h1>Create a Task</h1>
-
-<%= form_for(@task) do |f| %>
-  <p>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </p>
+<div class="containers">
+  <%= form_for(@task) do |f| %>
+    <p>
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+    </p>
   <p>
     <%= f.label :details %>
     <%= f.text_field :details %>
   </p>
   <%= f.submit %>
+</div>
 <% end %>
