--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.containers {
+  border: 1px solid grey;
+  border-radius: 6px;
+  background-color: rgb(47, 48, 48);
+  width: 80%;
+  padding: 10px;
+  min-height: 50px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
